# mdetr

./: .gitignore  eval_flickr_ja_mmdialogue.sh  evaluate.sh  fine-tune_flickr_ja.sh  fine-tune_flickr_ja_mmdialogue.sh  fine-tune_mmdialogue.sh  fine-tune_mmdialogue_b3.sh  fine-tune_mmdialogue_b5.sh  install.md  main.py  preprocess.md  pretrain.sh  pyproject.toml  requirements2.txt  requirements3.txt  run_mdetr.py
configs/: flickr_ja.json  flickr_ja_mmdialogue.json  flickr_mmdialogue.json  mmdialogue.json  pretrain_ja_flickr.json
datasets/: __init__.py  flickr.py  flickr_eval.py
models/: mdetr.py  postprocessors.py  transformer.py
scripts/: eval_lvis.py
scripts/fine-tuning/: gqa_coco_format.py  phrasecut_coco_format.py  subsample_lvis.py  vqa_coco_format.py
scripts/pre-training/: flickr_combined.py  gqa_combined_val.py  refexp_combined_train.py  refexp_combined_val.py
scripts/utils/: dump.py  spans.py
tests/: test_get_sentence_data_ja.py
tests/data/: 1000092795.txt
util/: misc.py  util.py
